--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,7 @@ jobs:
         name: emattiza
         # If you chose API tokens for write access OR if you have a private cache
         authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-    - run: nix build .#{{matrix.nix-attr}}
+    - run: 'nix build .#{{matrix.nix-attr}}'
     - run: scripts/push_image.sh
       env:
         IMAGE_URI: 'docker://ghcr.io/loftylabs/python-nix-images/${{ matrix.python-version }}'
