--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,3 +36,28 @@ jobs:
       env:
         IMAGE_URI: 'docker://ghcr.io/loftylabs/python-nix-images/${{ matrix.python-version }}'
         NIX_PACKAGE: '${{matrix.nix-attr}}'
+  scan-images:
+    needs: build-and-push
+    strategy:
+      matrix:
+        include:
+          - python-version: python:3.11-gdal
+            nix-attr: python311-gdal
+          - python-version: python:3.10-gdal
+            nix-attr: python310-gdal
+          - python-version: python:3.11
+            nix-attr: python311
+          - python-version: python:3.10
+            nix-attr: python310
+    runs-on: ubuntu-latest
+    steps:
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'ghcr.io/loftylabs/python-nix-images/${{ matrix.python-version }}'
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
+
