dont fail builds, just report

--- a/.github/workflows/scan-images.yaml
+++ b/.github/workflows/scan-images.yaml
@@ -6,7 +6,7 @@ on:
     # Every day at 00:30
     - cron: '30 0 * * *'
 jobs:
-  build:
+  scan:
     strategy:
       matrix:
         include:
@@ -18,7 +18,7 @@ jobs:
             nix-attr: python311
           - python-version: python:3.10
             nix-attr: python310
-    name: Build
+    name: Scan
     runs-on: ubuntu-20.04
     steps:
       - name: Log into ghcr
@@ -45,6 +45,7 @@ jobs:
         with:
           sbom: "${{ matrix.nix-attr }}-sbom.spdx.json"
           output-format: 'sarif'
+          fail-build: false
           only-fixed: true
 
       - name: Upload Trivy scan results to GitHub Security tab
