--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,9 +28,12 @@ jobs:
     if: github.event.pull_request.merged == true
     steps:
     - uses: actions/checkout@v3
-    - uses: cachix/install-nix-action@v20
+    - name: Install Nix
+      uses: DeterminateSystems/nix-installer-action@v4
       with:
-        nix_path: nixpkgs=channel:nixos-unstable
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Run the Magic Nix Cache
+      uses: DeterminateSystems/magic-nix-cache-action@v1
     - name: Log into ghcr
       uses: docker/login-action@v2
       with:
